@@ -50,16 +50,6 @@
   </child>
 
   <child>
-    <widget class="GtkCheckMenuItem" id="full_path1">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Full _path</property>
-      <property name="use_underline">True</property>
-      <property name="active">False</property>
-      <signal name="activate" handler="rbm_full_path1_activate" last_modification_time="Wed, 22 Jun 2005 11:36:22 GMT"/>
-    </widget>
-  </child>
-
-  <child>
     <widget class="GtkCheckMenuItem" id="recv_as_group1">
       <property name="visible">True</property>
       <property name="label" translatable="yes">Recv as _group</property>
