@@ -7,7 +7,6 @@
 gchar *s = N_("Change _device");
 gchar *s = N_("Options");
 gchar *s = N_("Local view");
-gchar *s = N_("Full _path");
 gchar *s = N_("Recv as _group");
-gchar *s = N_("Delete var");
+gchar *s = N_("Delete var/app");
 gchar *s = N_("Create folder");
