@@ -8,14 +8,11 @@ gchar *s = N_("Options");
 gchar *s = N_("sin_gle");
 gchar *s = N_("_group");
 gchar *s = N_("Receive as");
-gchar *s = N_("_full");
-gchar *s = N_("_local");
-gchar *s = N_("Path");
 gchar *s = N_("delete files & vars");
 gchar *s = N_("Confirm");
 gchar *s = N_("all _files");
 gchar *s = N_("T_I only");
 gchar *s = N_("Display");
-gchar *s = N_("backup/group");
+gchar *s = N_("backup");
 gchar *s = N_("_TiGroup");
 gchar *s = N_("Backup/Restore with");
